<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.AddArtikelMainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textview_config"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_weight="4"
            android:background="@drawable/textview_add_artikel"
            android:clickable="true"
            android:gravity="center"
            android:textSize="16dp"
            android:text="@string/addConfig"
            android:textAllCaps="false"
            android:textColor="@color/my_color"


            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/listeTitel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="16dp"
            android:gravity="center_horizontal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >

        <ImageView
            android:id="@+id/favorit_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:src="@drawable/ic_grade_black_24dp" />

        <TextView
            android:id="@+id/textview_addArtikel"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="4"
            android:background="@drawable/textview_add_artikel"
            android:clickable="true"
            android:textSize="16dp"
            android:gravity="center"
            android:text="@string/addArtikel"
            android:textAllCaps="false"
            android:textColor="@color/my_color"

            />

        <ImageView
            android:id="@+id/filter_id"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:src="@drawable/ic_filter" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textview_addLocations"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_weight="4"
            android:background="@drawable/textview_add_artikel"
            android:clickable="true"
            android:gravity="center"
            android:textSize="16dp"
            android:text="@string/addLocation"
            android:textAllCaps="false"
            android:textColor="@color/my_color"


            />

        <TextView
            android:id="@+id/textview_addReminder"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_weight="4"
            android:background="@drawable/textview_add_artikel"
            android:clickable="true"
            android:gravity="center"
            android:textSize="16dp"
            android:text="@string/addReminder"
            android:textAllCaps="false"
            android:textColor="@color/my_color" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <ExpandableListView
            android:id="@+id/lvExp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@null"
            android:dividerHeight="0dp" />

    </LinearLayout>

</LinearLayout>


